--- a/style.css
+++ b/style.css
@@ -81,7 +81,13 @@ section {
   margin-top: 3rem;
   margin-bottom: 3rem;
 }
-
+/* HR-streg mellem sektioner */
+hr {
+  border: none;
+  height: 2px;
+  background: #bbb;
+  margin: 2rem 0;
+}
 /* --- Header med billede i højre side --- */
 .top-header {
   display: flex;
@@ -269,6 +275,11 @@ body.dark-mode .download-cards .card {
   box-shadow: 0 4px 8px rgba(255, 255, 255, 0.05);
   color: #ccc;
 }
+/* HR i dark mode */
+body.dark-mode hr {
+  background: #444;
+}
+
 
 body.dark-mode .top-header {
   background-color: transparent;
