--- a/style.css
+++ b/style.css
@@ -289,3 +289,11 @@ body.dark-mode .top-header {
 body.dark-mode .profile-img-top {
   box-shadow: 0 0 10px 2px rgba(130, 170, 255, 0.6);
 }
+
+.subtitle {
+    color: #ccc;
+    font-size: 1rem;
+    margin-bottom: 1.5rem;
+    text-align: center;
+    font-style: italic;
+}
