--- a/style.css
+++ b/style.css
@@ -290,10 +290,27 @@ body.dark-mode .profile-img-top {
   box-shadow: 0 0 10px 2px rgba(130, 170, 255, 0.6);
 }
 
-.subtitle {
-    color: #ccc;
+.download-cards h2,
+.download-cards .subtitle {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.download-cards .subtitle {
+    color: #000; /* Sort farve */
     font-size: 1rem;
     margin-bottom: 1.5rem;
-    text-align: center;
     font-style: italic;
+    font-weight: 600;
 }
+
+.top-header {
+    text-align: center; /* Centrerer alt tekst og inline-elementer */
+    margin-bottom: 3rem; /* Tilføjer lidt plads under headeren */
+}
+
+.title-container {
+    display: inline-block; /* Så alt indeni holder sig samlet */
+}
+
